--- a/Project.toml
+++ b/Project.toml
@@ -2,6 +2,7 @@
 BridgeStan = "c88b6f0a-829e-4b0b-94b7-f06ab5908f5a"
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+DotEnv = "4dc1fcf4-5e3b-5448-94ab-0c38ec0385c1"
 DynamicPPL = "366bfd00-2699-11ea-058f-f148b4cae6d8"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
